--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<br><br>
 	<center><h1> MERGE ASSIGNMENT</h1></center>
 	<h3> The git merge command facilitates you to take the data created by git branch and integrate them into a single branch. Git merge will associate a series of commits into one unified history. Generally, git merge is used to combine two branches. </h3>
+	<p> Different commands of merge</p>
 </body>
 </html>
